Update and rename portfolioa.html to index.html

--- a/index.html
+++ b/index.html
@@ -1430,7 +1430,7 @@
             <h3>Made By Surabhi</h3>
         </div>
     </div>
-    <script src="portfolioa.js"></script>
+    <script src="index.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init({
