--- a/index.html
+++ b/index.html
@@ -1384,12 +1384,19 @@
           </button>
                     </div>
                 </div>
+                 
+                <div class="right-projects" data-aos="flip-left">
+                    <div class="project-container">
+                        <img class="projects-img-3" src="https://github.com/Girlwithasmile/tictactoe-game/blob/main/tictactoe.png?raw=true" alt="" />
+                        <button class="project-btn">
+            <a class="project-a" href="https://girlwithasmile.github.io/tictactoe-game/">TICTACTOE GAME</a>
+          </button>
             </div>
         </div>
 
     </div>
     </div>
-    </div>
+    
 
     <!-- CONTACT SECTION -->
     <div class="contact" id="contact">
